# desafio_renTAI

./: .gitignore  README.md  pyproject.toml
artifacts/: centroids.meta.json  centroids.npz
data/labeled/: labels.csv
docs/01-spec/: api-contract.openapi.yaml  definicao-documento-clinico-valido.md
docs/02-decisoes/: ADR-001-pre-treinado-vs-treinar.md  ADR-002-arquitetura-multimodal.md  ADR-003-politica-de-limiar.md  ADR-004-validacao-LOGO.md  ADR-005-artifact-de-centroides.md
docs/03-testes/: casos-de-borda-pre-registrados.md
docs/04-experimentos/: experiment-log.md
docs/05-resultados/: metricas_globais.json  metricas_globais_e001_baseline.json  metricas_globais_loo.json  relatorio-e001.md  run_results.csv  run_results_e001_baseline.csv  run_results_loo.csv
docs/06-ia/: AI_USAGE_LOG.md
docs/07-confianca/: limitacoes-do-dataset.md
scripts/data_prep/: generate_fake_scans.py  generate_synthetic_docs.py  generate_varied_templates.py
src/app/: __init__.py  config.py  main.py
src/app/api/: errors.py  routes.py  schemas.py
src/app/classifiers/: __init__.py  base.py  embeddings.py  visual_clip.py
src/app/evaluation/: compare.py  report.py  runner.py
src/app/extractors/: __init__.py  base.py  image.py  ocr.py  pdf_native.py  quality.py
src/app/fusion/: __init__.py  score_fusion.py
src/app/pipeline/: __init__.py  orchestrator.py  router.py
src/app/thresholds/: __init__.py  policy.py
src/app/training/: build_artifact.py
src/app/utils/: logging.py
