[project]
name = "desafio-p04"
version = "0.1.0"
description = "Servico de validacao de documentos clinicos por IA — Desafio ReNTAI P04"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "python-multipart>=0.0.20",
  "pydantic>=2.9",
  "pydantic-settings>=2.7",
  "python-dotenv>=1.0",
  "pypdf>=5.0",
  "pdf2image>=1.17",
  "Pillow>=11.0",
  "numpy>=1.26",
  "structlog>=24.4",
  "httpx>=0.27",
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=3.0",
  "open-clip-torch>=2.30",
  "torch>=2.5",
]
ocr = [
  "paddleocr>=2.9",
  "paddlepaddle>=3.0",
]
dev = [
  "matplotlib>=3.9",
  "reportlab>=4.2",
  "requests>=2.32",
  "ruff>=0.7",
  "mypy>=1.13",
  "pandas>=2.2",
  "scikit-learn>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
